# tasks-mcp

./: .gitignore  AGENTS.md  Cargo.toml  NOTICE  README.md  SECURITY_AUDIT.md  justfile
dbus/: org.tasks.TasksMcp.service
docs/: spec.md
docs/requests/: FEATURE_task_native_notes_and_external_refs_HIGH.md  FEATURE_task_status_validating_MEDIUM.md
kde/: org.tasks.widget.desktop
kde/plasmoid/org.tasks.widget/: metadata.json
kde/plasmoid/org.tasks.widget/contents/code/: tasks_client.py
kde/plasmoid/org.tasks.widget/contents/ui/: TaskDelegate.qml  main.qml
kde/widget/: Cargo.toml  build.rs
kde/widget/qml/: Main.qml  TaskDelegate.qml
kde/widget/src/: main.rs
src/: dbus.rs  error.rs  lib.rs  main.rs  markdown.rs  model.rs  server.rs  service.rs  storage.rs  tools.rs  transport.rs
src/operations/: mod.rs  task_ops.rs
tests/: mcp_stdio.rs  task_ops.rs  ws_transport_refused.rs
