[package]
name = "tasks-mcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]
resolver = "3"
members = ["."]

[dependencies]
chrono = { version = "0.4.43", features = ["clock"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
# The websocket transport is deliberately NOT compiled in (and is additionally
# refused via `ServerConfig::without_websocket`): mcp-core's ws transport is
# unauthenticated. tasks-mcp is stdio-served (plus D-Bus) in practice.
mcp-core = { git = "https://github.com/adelie-ai/mcp-core" }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shellexpand = "3.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
zbus = { version = "5", features = ["tokio"] }

[dev-dependencies]
tempfile = "3.0"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
