[package]
name = "tasks-widget"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "KDE/Qt widget for tasks-mcp — displays open tasks with filtering and grouping."

# ---- runtime deps -----------------------------------------------------------
[dependencies]
cxx-qt-lib = { version = "0.8", features = ["qt_gui", "qt_qml"] }

# ---- build deps -------------------------------------------------------------
[build-dependencies]
cxx-qt-build = "0.8"
